test/Dialect/Struct/struct_params_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {llzk.lang} {
  poly.template @TComponentA1 {
    poly.param @A
    poly.param @B

    struct.def @ComponentA1 {
      function.def @compute() -> !struct.type<@TComponentA1::@ComponentA1<[@A, @B]>> {
        %self = struct.new : !struct.type<@TComponentA1::@ComponentA1<[@A, @B]>>
        function.return %self : !struct.type<@TComponentA1::@ComponentA1<[@A, @B]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentA1::@ComponentA1<[@A, @B]>>) { function.return }
    }
  }

  poly.template @TComponentA2 {
    poly.param @C

    struct.def @ComponentA2 {
      // expected-error@+1 {{'struct.type' type has 3 parameters but "ComponentA1" expects 2}}
      struct.member @f3 : !struct.type<@TComponentA1::@ComponentA1<[5, @C, 6]>>

      function.def @compute() -> !struct.type<@TComponentA2::@ComponentA2<[@C]>> {
        %self = struct.new : !struct.type<@TComponentA2::@ComponentA2<[@C]>>
        function.return %self : !struct.type<@TComponentA2::@ComponentA2<[@C]>>
      }

      function.def @constrain(%self: !struct.type<@TComponentA2::@ComponentA2<[@C]>>) { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentB1 {
    poly.param @A
    poly.param @B

    struct.def @ComponentB1 {
      function.def @compute() -> !struct.type<@TComponentB1::@ComponentB1<[@A, @B]>> {
        %self = struct.new : !struct.type<@TComponentB1::@ComponentB1<[@A, @B]>>
        function.return %self : !struct.type<@TComponentB1::@ComponentB1<[@A, @B]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentB1::@ComponentB1<[@A, @B]>>) { function.return }
    }
  }

  struct.def @ComponentB2 {
    struct.member @f3 : !struct.type<@TComponentB1::@ComponentB1<[5,5]>>

    function.def @compute() -> !struct.type<@ComponentB2> {
      %self = struct.new : !struct.type<@ComponentB2>
      function.return %self : !struct.type<@ComponentB2>
    }

    function.def @constrain(%self: !struct.type<@ComponentB2>) {
      // expected-error@+1 {{'struct.readm' op has wrong type; expected '!struct.type<@TComponentB1::@ComponentB1<[5, 5]>>', got '!struct.type<@TComponentB1::@ComponentB1<[5, 6]>>'}}
      %b = struct.readm %self[@f3] : !struct.type<@ComponentB2>, !struct.type<@TComponentB1::@ComponentB1<[5,6]>>
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentC1 {
    poly.param @A
    poly.param @B

    struct.def @ComponentC1 {
      function.def @compute() -> !struct.type<@TComponentC1::@ComponentC1<[@A, @B]>> {
        %self = struct.new : !struct.type<@TComponentC1::@ComponentC1<[@A, @B]>>
        function.return %self : !struct.type<@TComponentC1::@ComponentC1<[@A, @B]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentC1::@ComponentC1<[@A, @B]>>) { function.return }
    }
  }

  struct.def @ComponentC2 {
    struct.member @f3 : !struct.type<@TComponentC1::@ComponentC1<[5,5]>>

    function.def @compute() -> !struct.type<@ComponentC2> {
      %self = struct.new : !struct.type<@ComponentC2>
      function.return %self : !struct.type<@ComponentC2>
    }

    function.def @constrain(%self: !struct.type<@ComponentC2>) {
      // expected-error@+1 {{'struct.readm' op has wrong type; expected '!struct.type<@TComponentC1::@ComponentC1<[5, 5]>>', got '!struct.type<@TComponentC1::@ComponentC1<[5, 6, 4]>>'}}
      %b = struct.readm %self[@f3] : !struct.type<@ComponentC2>, !struct.type<@TComponentC1::@ComponentC1<[5,6,4]>>
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentD1 {
    poly.param @A
    poly.param @B

    struct.def @ComponentD1 {
      function.def @compute() -> !struct.type<@TComponentD1::@ComponentD1<[@A, @B]>> {
        %self = struct.new : !struct.type<@TComponentD1::@ComponentD1<[@A, @B]>>
        function.return %self : !struct.type<@TComponentD1::@ComponentD1<[@A, @B]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentD1::@ComponentD1<[@A, @B]>>) { function.return }
    }
  }

  struct.def @ComponentD2 {
    struct.member @f3 : !struct.type<@TComponentD1::@ComponentD1<[5,5]>>

    function.def @compute() -> !struct.type<@ComponentD2> {
      %self = struct.new : !struct.type<@ComponentD2>
      function.return %self : !struct.type<@ComponentD2>
    }

    function.def @constrain(%self: !struct.type<@ComponentD2>) {
      // expected-error@+1 {{'struct.readm' op has wrong type; expected '!struct.type<@TComponentD1::@ComponentD1<[5, 5]>>', got '!struct.type<@TComponentD1::@ComponentD1<[5]>>'}}
      %b = struct.readm %self[@f3] : !struct.type<@ComponentD2>, !struct.type<@TComponentD1::@ComponentD1<[5]>>
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentE1 {
    poly.param @A
    poly.param @B

    struct.def @ComponentE1 {
      function.def @compute() -> !struct.type<@TComponentE1::@ComponentE1<[@A, @B]>> {
        %self = struct.new : !struct.type<@TComponentE1::@ComponentE1<[@A, @B]>>
        function.return %self : !struct.type<@TComponentE1::@ComponentE1<[@A, @B]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentE1::@ComponentE1<[@A, @B]>>) { function.return }
    }
  }

  poly.template @TComponentE2 {
    poly.param @C

    struct.def @ComponentE2 {
      struct.member @f3 : !struct.type<@TComponentE1::@ComponentE1<[5, @C]>>

      function.def @compute() -> !struct.type<@TComponentE2::@ComponentE2<[@C]>> {
        %self = struct.new : !struct.type<@TComponentE2::@ComponentE2<[@C]>>
        function.return %self : !struct.type<@TComponentE2::@ComponentE2<[@C]>>
      }

      function.def @constrain(%self: !struct.type<@TComponentE2::@ComponentE2<[@C]>>) {
        // expected-note@+1 {{prior use here}}
        %b = struct.readm %self[@f3] : !struct.type<@TComponentE2::@ComponentE2<[@C]>>, !struct.type<@TComponentE1::@ComponentE1<[5, @C]>>
        // expected-error@+1 {{use of value '%b' expects different type than prior uses: '!struct.type<@TComponentE1::@ComponentE1<[5, @C, 4]>>' vs '!struct.type<@TComponentE1::@ComponentE1<[5, @C]>>'}}
        function.call @TComponentE1::@ComponentE1::@constrain(%b) : (!struct.type<@TComponentE1::@ComponentE1<[5,@C,4]>>) -> ()
        function.return
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentF1 {
    poly.param @A
    poly.param @B

    struct.def @ComponentF1 {
      function.def @compute() -> !struct.type<@TComponentF1::@ComponentF1<[@A, @B]>> {
        %self = struct.new : !struct.type<@TComponentF1::@ComponentF1<[@A, @B]>>
        function.return %self : !struct.type<@TComponentF1::@ComponentF1<[@A, @B]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentF1::@ComponentF1<[@A, @B]>>) { function.return }
    }
  }

  poly.template @TComponentF2 {
    poly.param @C

    struct.def @ComponentF2 {
      // expected-error@+1 {{'struct.type' type has 3 parameters but "ComponentF1" expects 2}}
      function.def @compute(%0: !struct.type<@TComponentF1::@ComponentF1<[5,@C,88]>>) -> !struct.type<@TComponentF2::@ComponentF2<[@C]>> {
        %self = struct.new : !struct.type<@TComponentF2::@ComponentF2<[@C]>>
        function.return %self : !struct.type<@TComponentF2::@ComponentF2<[@C]>>
      }

      function.def @constrain(%self: !struct.type<@TComponentF2::@ComponentF2<[@C]>>, %0: !struct.type<@TComponentF1::@ComponentF1<[5,@C,88]>>) {
        function.return
      }
    }
  }
}
// -----
// No parameters used to reference self type within component
module attributes {llzk.lang} {
  poly.template @TComponentG {
    poly.param @A
    poly.param @B

    struct.def @ComponentG { // expected-note {{should be type of this 'struct.def'}}
      // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@TComponentG::@ComponentG<[@A, @B]>" as return type}}
      function.def @compute() -> !struct.type<@TComponentG::@ComponentG> {
        %self = struct.new : !struct.type<@TComponentG::@ComponentG>
        function.return %self : !struct.type<@TComponentG::@ComponentG>
      }
      function.def @constrain(%self: !struct.type<@TComponentG::@ComponentG>) { function.return }
    }
  }
}
// -----
// Fewer parameters used to reference self type within component
module attributes {llzk.lang} {
  poly.template @TComponentH {
    poly.param @A
    poly.param @B

    struct.def @ComponentH { // expected-note {{should be type of this 'struct.def'}}
      // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@TComponentH::@ComponentH<[@A, @B]>" as return type}}
      function.def @compute() -> !struct.type<@TComponentH::@ComponentH<[@A]>> {
        %self = struct.new : !struct.type<@TComponentH::@ComponentH<[@A]>>
        function.return %self : !struct.type<@TComponentH::@ComponentH<[@A]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentH::@ComponentH<[@A]>>) { function.return }
    }
  }
}
// -----
// More parameters used to reference self type within component
module attributes {llzk.lang} {
  poly.template @TComponentI {
    poly.param @A
    poly.param @B

    struct.def @ComponentI { // expected-note {{should be type of this 'struct.def'}}
      // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@TComponentI::@ComponentI<[@A, @B]>" as return type}}
      function.def @compute() -> !struct.type<@TComponentI::@ComponentI<[@A, @B, @B]>> {
        %self = struct.new : !struct.type<@TComponentI::@ComponentI<[@A, @B, @B]>>
        function.return %self : !struct.type<@TComponentI::@ComponentI<[@A, @B, @B]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentI::@ComponentI<[@A, @B, @B]>>) { function.return }
    }
  }
}
// -----
// Different parameters used to reference self type within component
module attributes {llzk.lang} {
  poly.template @TComponentJ {
    poly.param @A
    poly.param @B

    struct.def @ComponentJ { // expected-note {{should be type of this 'struct.def'}}
      // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@TComponentJ::@ComponentJ<[@A, @B]>" as return type}}
      function.def @compute() -> !struct.type<@TComponentJ::@ComponentJ<[@B, @A]>> {
        %self = struct.new : !struct.type<@TComponentJ::@ComponentJ<[@B, @A]>>
        function.return %self : !struct.type<@TComponentJ::@ComponentJ<[@B, @A]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentJ::@ComponentJ<[@B, @A]>>) { function.return }
    }
  }
}
// -----
// Unknown parameters used to reference self type within component
module attributes {llzk.lang} {
  poly.template @TComponentK {
    poly.param @A
    poly.param @B

    struct.def @ComponentK {
      // expected-error@+2 {{'function.def' op references unknown symbol "@C"}}
      // expected-error@+1 {{'function.def' op references unknown symbol "@D"}}
      function.def @compute() -> !struct.type<@TComponentK::@ComponentK<[@C, @D]>> {
        %self = struct.new : !struct.type<@TComponentK::@ComponentK<[@C, @D]>>
        function.return %self : !struct.type<@TComponentK::@ComponentK<[@C, @D]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentK::@ComponentK<[@C, @D]>>) { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentL1 {
    poly.param @Z

    struct.def @ComponentL1 { // expected-note {{type parameters must unify with parameters defined here}}
      function.def @compute() -> !struct.type<@TComponentL1::@ComponentL1<[@Z]>> {
        %self = struct.new : !struct.type<@TComponentL1::@ComponentL1<[@Z]>>
        function.return %self : !struct.type<@TComponentL1::@ComponentL1<[@Z]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentL1::@ComponentL1<[@Z]>>)  { function.return }
    }
  }
  struct.def @ComponentL2 {
    // expected-error@+1 {{Cannot unify parameters of type '!struct.type<@TComponentL1::@ComponentL1>' with parameters of 'struct.def' "@TComponentL1::@ComponentL1<[@Z]>"}}
    struct.member @f : !struct.type<@TComponentL1::@ComponentL1>

    function.def @compute() -> !struct.type<@ComponentL2> {
      %self = struct.new : !struct.type<@ComponentL2>
      function.return %self : !struct.type<@ComponentL2>
    }
    function.def @constrain(%self: !struct.type<@ComponentL2>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    poly.template @TComponentM1 {
      poly.param @Z

      struct.def @ComponentM1 { // expected-note {{type parameters must unify with parameters defined here}}
        function.def @compute() -> !struct.type<@a::@TComponentM1::@ComponentM1<[@Z]>> {
          %self = struct.new : !struct.type<@a::@TComponentM1::@ComponentM1<[@Z]>>
          function.return %self : !struct.type<@a::@TComponentM1::@ComponentM1<[@Z]>>
        }
        function.def @constrain(%self: !struct.type<@a::@TComponentM1::@ComponentM1<[@Z]>>)  { function.return }
      }
    }
  }
  module @b {
    struct.def @ComponentM2 {
      // expected-error@+1 {{Cannot unify parameters of type '!struct.type<@a::@TComponentM1::@ComponentM1>' with parameters of 'struct.def' "@a::@TComponentM1::@ComponentM1<[@Z]>"}}
      struct.member @f : !struct.type<@a::@TComponentM1::@ComponentM1>

      function.def @compute() -> !struct.type<@b::@ComponentM2> {
        %self = struct.new : !struct.type<@b::@ComponentM2>
        function.return %self : !struct.type<@b::@ComponentM2>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentM2>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    struct.def @ComponentN1 {
      function.def @compute() -> !struct.type<@a::@ComponentN1> {
        %self = struct.new : !struct.type<@a::@ComponentN1>
        function.return %self : !struct.type<@a::@ComponentN1>
      }
      function.def @constrain(%self: !struct.type<@a::@ComponentN1>)  { function.return }
    }
  }
  module @b {
    poly.template @TComponentN2 {
      poly.param @A

      struct.def @ComponentN2 {
        // expected-error@+1 {{'struct.type' type has 2 parameters but "ComponentN1" expects 0}}
        struct.member @f : !struct.type<@a::@ComponentN1<[@A, @A]>>

        function.def @compute() -> !struct.type<@b::@TComponentN2::@ComponentN2<[@A]>> {
          %self = struct.new : !struct.type<@b::@TComponentN2::@ComponentN2<[@A]>>
          function.return %self : !struct.type<@b::@TComponentN2::@ComponentN2<[@A]>>
        }
        function.def @constrain(%self: !struct.type<@b::@TComponentN2::@ComponentN2<[@A]>>)  { function.return }
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    poly.template @TComponentO1 {
      poly.param @Z

      struct.def @ComponentO1 {
        function.def @compute() -> !struct.type<@a::@TComponentO1::@ComponentO1<[@Z]>> {
          %self = struct.new : !struct.type<@a::@TComponentO1::@ComponentO1<[@Z]>>
          function.return %self : !struct.type<@a::@TComponentO1::@ComponentO1<[@Z]>>
        }
        function.def @constrain(%self: !struct.type<@a::@TComponentO1::@ComponentO1<[@Z]>>)  { function.return }
      }
    }
  }
  module @b {
    struct.def @ComponentO2 {
      // expected-error@+1 {{'struct.member' op references unknown symbol "@A"}}
      struct.member @f : !struct.type<@a::@TComponentO1::@ComponentO1<[@A]>>

      function.def @compute() -> !struct.type<@b::@ComponentO2> {
        %self = struct.new : !struct.type<@b::@ComponentO2>
        function.return %self : !struct.type<@b::@ComponentO2>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentO2>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    poly.template @TComponentP1 {
      poly.param @Z

      struct.def @ComponentP1 {
        function.def @compute() -> !struct.type<@a::@TComponentP1::@ComponentP1<[@Z]>> {
          %self = struct.new : !struct.type<@a::@TComponentP1::@ComponentP1<[@Z]>>
          function.return %self : !struct.type<@a::@TComponentP1::@ComponentP1<[@Z]>>
        }
        function.def @constrain(%self: !struct.type<@a::@TComponentP1::@ComponentP1<[@Z]>>)  { function.return }
      }
    }
  }
  module @b {
    struct.def @ComponentP2 {
      // expected-error@+1 {{'struct.member' op references unknown symbol "@constrain"}}
      struct.member @f : !struct.type<@a::@TComponentP1::@ComponentP1<[@constrain]>>

      function.def @compute() -> !struct.type<@b::@ComponentP2> {
        %self = struct.new : !struct.type<@b::@ComponentP2>
        function.return %self : !struct.type<@b::@ComponentP2>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentP2>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    poly.template @TComponentQ1 {
      poly.param @Z

      struct.def @ComponentQ1 {
        function.def @compute() -> !struct.type<@a::@TComponentQ1::@ComponentQ1<[@Z]>> {
          %self = struct.new : !struct.type<@a::@TComponentQ1::@ComponentQ1<[@Z]>>
          function.return %self : !struct.type<@a::@TComponentQ1::@ComponentQ1<[@Z]>>
        }
        function.def @constrain(%self: !struct.type<@a::@TComponentQ1::@ComponentQ1<[@Z]>>)  { function.return }
      }
    }
  }
  module @b {
    struct.def @ComponentQ2 {
      // expected-error@+1 {{ref "@b::@ComponentQ2::@constrain" in type '!struct.type<@a::@TComponentQ1::@ComponentQ1<[@b::@ComponentQ2::@constrain]>>' refers to a 'function.def' which is not allowed}}
      struct.member @f : !struct.type<@a::@TComponentQ1::@ComponentQ1<[@b::@ComponentQ2::@constrain]>>

      function.def @compute() -> !struct.type<@b::@ComponentQ2> {
        %self = struct.new : !struct.type<@b::@ComponentQ2>
        function.return %self : !struct.type<@b::@ComponentQ2>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentQ2>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    poly.template @TComponentR1 {
      poly.param @Z

      struct.def @ComponentR1 {
        function.def @compute() -> !struct.type<@a::@TComponentR1::@ComponentR1<[@Z]>> {
          %self = struct.new : !struct.type<@a::@TComponentR1::@ComponentR1<[@Z]>>
          function.return %self : !struct.type<@a::@TComponentR1::@ComponentR1<[@Z]>>
        }
        function.def @constrain(%self: !struct.type<@a::@TComponentR1::@ComponentR1<[@Z]>>)  { function.return }
      }
    }
  }
  module @b {
    struct.def @ComponentR2 {
      // expected-error@+1 {{ref "@b" in type '!struct.type<@a::@TComponentR1::@ComponentR1<[@b]>>' refers to a 'builtin.module' which is not allowed}}
      struct.member @f : !struct.type<@a::@TComponentR1::@ComponentR1<[@b]>>

      function.def @compute() -> !struct.type<@b::@ComponentR2> {
        %self = struct.new : !struct.type<@b::@ComponentR2>
        function.return %self : !struct.type<@b::@ComponentR2>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentR2>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentS1 {
    poly.param @Z

    struct.def @ComponentS1 {
      function.def @compute() -> !struct.type<@TComponentS1::@ComponentS1<[@Z]>> {
        %self = struct.new : !struct.type<@TComponentS1::@ComponentS1<[@Z]>>
        function.return %self : !struct.type<@TComponentS1::@ComponentS1<[@Z]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentS1::@ComponentS1<[@Z]>>)  { function.return }
    }
  }
  struct.def @ComponentS2 {
    // expected-error@+1 {{ref "@ComponentS2" in type '!struct.type<@TComponentS1::@ComponentS1<[@ComponentS2]>>' refers to a 'struct.def' which is not allowed}}
    struct.member @f : !struct.type<@TComponentS1::@ComponentS1<[@ComponentS2]>>

    function.def @compute() -> !struct.type<@ComponentS2> {
      %self = struct.new : !struct.type<@ComponentS2>
      function.return %self : !struct.type<@ComponentS2>
    }
    function.def @constrain(%self: !struct.type<@ComponentS2>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  function.def private @some_function() -> ()
  poly.template @TComponentT1 {
    poly.param @Z

    struct.def @ComponentT1 {
      function.def @compute() -> !struct.type<@TComponentT1::@ComponentT1<[@Z]>> {
        %self = struct.new : !struct.type<@TComponentT1::@ComponentT1<[@Z]>>
        function.return %self : !struct.type<@TComponentT1::@ComponentT1<[@Z]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentT1::@ComponentT1<[@Z]>>)  { function.return }
    }
  }
  struct.def @ComponentT2 {
    // expected-error@+1 {{ref "@some_function" in type '!struct.type<@TComponentT1::@ComponentT1<[@some_function]>>' refers to a 'function.def' which is not allowed}}
    struct.member @f : !struct.type<@TComponentT1::@ComponentT1<[@some_function]>>

    function.def @compute() -> !struct.type<@ComponentT2> {
      %self = struct.new : !struct.type<@ComponentT2>
      function.return %self : !struct.type<@ComponentT2>
    }
    function.def @constrain(%self: !struct.type<@ComponentT2>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    poly.template @TComponentU1 {
      poly.param @Z

      struct.def @ComponentU1 {
        function.def @compute() -> !struct.type<@a::@TComponentU1::@ComponentU1<[@Z]>> {
          %self = struct.new : !struct.type<@a::@TComponentU1::@ComponentU1<[@Z]>>
          function.return %self : !struct.type<@a::@TComponentU1::@ComponentU1<[@Z]>>
        }
        function.def @constrain(%self: !struct.type<@a::@TComponentU1::@ComponentU1<[@Z]>>)  { function.return }
      }
    }
  }
  // expected-error@+1 {{'function.def' op references unknown symbol "@D"}}
  function.def @fun3(%0: !struct.type<@a::@TComponentU1::@ComponentU1<[@D]>>) -> !struct.type<@a::@TComponentU1::@ComponentU1<[@D]>> {
    function.return %0 : !struct.type<@a::@TComponentU1::@ComponentU1<[@D]>>
  }
}
// -----
module attributes {llzk.lang} {
  function.def @F() { function.return } // expected-note {{symbol already defined here}}
  poly.template @TComponentX {
    // expected-error@+1 {{'poly.param' op name conflicts with an existing symbol}}
    poly.param @F

    struct.def @ComponentX {
      function.def @compute() -> !struct.type<@TComponentX::@ComponentX<[@F]>> {
        %self = struct.new : !struct.type<@TComponentX::@ComponentX<[@F]>>
        function.return %self : !struct.type<@TComponentX::@ComponentX<[@F]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentX::@ComponentX<[@F]>>) { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TBadParamTypeA {
    poly.param @C

    struct.def @BadParamTypeA {
      function.def @compute() -> !struct.type<@TBadParamTypeA::@BadParamTypeA<[@C]>> {
        %self = struct.new : !struct.type<@TBadParamTypeA::@BadParamTypeA<[@C]>>
        function.return %self : !struct.type<@TBadParamTypeA::@BadParamTypeA<[@C]>>
      }

      function.def @constrain(%self: !struct.type<@TBadParamTypeA::@BadParamTypeA<[@C]>>) {
        function.return
      }
    }
  }
  struct.def @BadParamTypeB {
    // expected-error@+1 {{expected a valid LLZK type but found 'f32'}}
    struct.member @f3 : !struct.type<@TBadParamTypeA::@BadParamTypeA<[f32]>>

    function.def @compute() -> !struct.type<@BadParamTypeB> {
      %self = struct.new : !struct.type<@BadParamTypeB>
      function.return %self : !struct.type<@BadParamTypeB>
    }

    function.def @constrain(%self: !struct.type<@BadParamTypeB>) {
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TDeepInvalidArrayTypeA {
    poly.param @C

    struct.def @DeepInvalidArrayTypeA {
      function.def @compute() -> !struct.type<@TDeepInvalidArrayTypeA::@DeepInvalidArrayTypeA<[@C]>> {
        %self = struct.new : !struct.type<@TDeepInvalidArrayTypeA::@DeepInvalidArrayTypeA<[@C]>>
        function.return %self : !struct.type<@TDeepInvalidArrayTypeA::@DeepInvalidArrayTypeA<[@C]>>
      }

      function.def @constrain(%self: !struct.type<@TDeepInvalidArrayTypeA::@DeepInvalidArrayTypeA<[@C]>>) {
        function.return
      }
    }
  }

  function.def private @in_return_deep() ->
    !array.type<2 x
      !struct.type<@TDeepInvalidArrayTypeA::@DeepInvalidArrayTypeA<[
        !array.type<2 x
          !struct.type<@TDeepInvalidArrayTypeA::@DeepInvalidArrayTypeA<[
            !struct.type<@TDeepInvalidArrayTypeA::@DeepInvalidArrayTypeA<[
              !array.type<2 x !array.type<4 x i1>> // expected-error {{'array.type' element type cannot be 'array.type'}}
            ]>> // expected-error {{failed to parse template parameters}}
          ]>> // expected-error {{failed to parse template parameters}}
        > // expected-error {{failed to parse LLZK_ArrayType parameter 'elementType' which is to be a `::mlir::Type`}}
      ]>> // expected-error {{failed to parse template parameters}}
    > // expected-error {{failed to parse LLZK_ArrayType parameter 'elementType' which is to be a `::mlir::Type`}}
}

// -----

#map = affine_map<(i) -> (i, 2)>
module attributes {llzk.lang} {
  // This would also trigger {{'struct.def' op attribute 'const_params' failed to satisfy constraint: flat symbol ref array attribute}},
  // but the below error fires first.
  poly.template @TFoo {
    poly.param @N
    poly.param @P

    struct.def @Foo {
      // expected-error@+1 {{AffineMapAttr must yield a single result, but found 2 results}}
      function.def @compute() -> !struct.type<@TFoo::@Foo<[@N, @P, #map]>> {
        %self = struct.new : !struct.type<@TFoo::@Foo<[@N, @P, #map]>>
        function.return %self : !struct.type<@TFoo::@Foo<[@N, @P, #map]>>
      }

      function.def @constrain(%self: !struct.type<@TFoo::@Foo<[@N, @P, #map]>>) {
        function.return
      }
    }
  }
}

// -----

#map = affine_map<(i) -> ()>
module attributes {llzk.lang} {
  poly.template @TFoo {
    poly.param @N
    poly.param @P
    poly.param @A

    struct.def @Foo {
      function.def @compute() -> !struct.type<@TFoo::@Foo<[@N, @P, @A]>> {
        %self = struct.new : !struct.type<@TFoo::@Foo<[@N, @P, @A]>>
        function.return %self : !struct.type<@TFoo::@Foo<[@N, @P, @A]>>
      }

      function.def @constrain(%self: !struct.type<@TFoo::@Foo<[@N, @P, @A]>>) {
        function.return
      }
    }
  }

  poly.template @TBar {
    poly.param @N
    poly.param @P

    struct.def @Bar {
       // expected-error@+1 {{AffineMapAttr must yield a single result, but found 0 results}}
      struct.member @foo: !struct.type<@TFoo::@Foo<[@N, @P, #map]>>

      function.def @compute() -> !struct.type<@TBar::@Bar<[@N, @P]>> {
        %self = struct.new : !struct.type<@TBar::@Bar<[@N, @P]>>
        function.return %self : !struct.type<@TBar::@Bar<[@N, @P]>>
      }

      function.def @constrain(%self: !struct.type<@TBar::@Bar<[@N, @P]>>) {
        function.return
      }
    }
  }
}
